--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=learning
 spring.config.import=file:env.properties
 logging.config=classpath:logback-spring.xml
+spring.session.timeout = 15m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+
 spring.cloud.azure.keyvault.secret.endpoint=${KEYVAULT_ENDPOINT}
 spring.cloud.azure.keyvault.secret.profile.tenant-id=${KEYVAULT_TENANT_ID}
 spring.cloud.azure.keyvault.secret.credential.client-id=${KEYVAULT_CLIENT_ID}
