--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.session.timeout = 15m
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 
+com.yeung.learning.azure-key-vault-testing-key=${KEY_VAULT_TESTING_KEY}
+
 spring.cloud.azure.keyvault.secret.endpoint=${KEYVAULT_ENDPOINT}
 spring.cloud.azure.keyvault.secret.profile.tenant-id=${KEYVAULT_TENANT_ID}
 spring.cloud.azure.keyvault.secret.credential.client-id=${KEYVAULT_CLIENT_ID}
