update application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,10 @@ spring.cloud.azure.keyvault.secret.credential.client-secret=${KEYVAULT_CLIENT_SE
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH2_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH2_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
+
+spring.security.oauth2.client.registration.okta.client-id=${OKTA_OAUTH2_CLIENT_ID}
+spring.security.oauth2.client.registration.okta.client-secret=${OKTA_OAUTH2_CLIENT_SECRET}
+spring.security.oauth2.client.registration.okta.scope=openid,profile,email
+
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+
