--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 
 com.yeung.learning.azure-key-vault-testing-key=${KEY_VAULT_TESTING_KEY}
+com.yeung.learning.google.token-uri=${GOOGLE_OAUTH2_TOKEN_URI}
+com.yeung.learning.okta.token-uri=${OKTA_OAUTH2_TOKEN_URI}
+com.yeung.learning.google.jwk-set-uri=${GOOGLE_OAUTH2_JWKS_URI}
+com.yeung.learning.okta.jwk-set-uri=${OKTA_OAUTH2_JWKS_URI}
 
 spring.cloud.azure.keyvault.secret.endpoint=${KEYVAULT_ENDPOINT}
 spring.cloud.azure.keyvault.secret.profile.tenant-id=${KEYVAULT_TENANT_ID}
@@ -19,6 +23,4 @@ spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.okta.client-id=${OKTA_OAUTH2_CLIENT_ID}
 spring.security.oauth2.client.registration.okta.client-secret=${OKTA_OAUTH2_CLIENT_SECRET}
 spring.security.oauth2.client.registration.okta.scope=openid,profile,email
-
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 
